--- a/posts/gpt-code-generation.mdx
+++ b/posts/gpt-code-generation.mdx
@@ -9,6 +9,8 @@ description: How to use context-aware RAG and pydantic validation to allow GPT t
 
 ## Introduction
 
+> The full code for this is avaliable [here](https://github.com/ivanleomk/GPT-React) for reference.
+
 A while ago, I saw a demo video of Vercel's V0 and was blown away by what it could produce. It could take in user prompts, feedback and iteratively generate new and improved UI code using the popular `@shadcn/ui` library.
 
 This was soon followed by the [open-v0](https://github.com/raidendotai/openv0/) project by [raidendotai](https://twitter.com/n_raidenai). Since I didn't have access to v0 via vercel, i figured I would clone the project and try to figure out how it worked.
