Fixed up machine learning roadmap link

--- a/posts/machine-learning-roadmap.mdx
+++ b/posts/machine-learning-roadmap.mdx
@@ -26,8 +26,8 @@ I also continued reading more papers and have read the following two papers this
 
 This month I worked on two main projects
 
-- [Using GPT4 To generate React Components using the @shadcn/ui library](/blog/replacing_a_5_week_in_junior_intern)
-- [Creating an Arxiv Crawler]()
+- [Using GPT4 To generate React Components using the @shadcn/ui library](blog/gpt_react)
+- Creating an Arxiv Crawler
 
 ### September
 
